# ai-document-platform

./: .gitignore  README.md  ROADMAP.md  alembic.ini  docker-compose.yaml
alembic/: env.py
alembic/versions/: 3f9252c83b2c_add_chunk_completed_flag.py  5f0cf6e665c8_add_new_flag_and_status_fields_to_.py  726fcf553346_remove_id_from_pure_association_table_.py  74ad00e97d76_add_document_page_line_and_word_models_.py  7f219d26c0e2_add_autoincrement_to_id_mixin.py  7f6009fd3a19_add_ai_json_metadata_field.py  94260199ac13_create_document_related_models.py  9af903e57689_add_embedding_field_and_related_flags.py  b448adc31e6b_create_role_and_user_models.py  b6f8c830046a_add_document_chunks_for_embedding.py
services/document_api/: pyproject.toml
services/document_api/app/: config.py  database.py  dependencies.py  env.py  helpers.py  main.py  s3_storage.py  startup.py
services/document_api/app/core/: embedding.py
services/document_api/app/kafka/: producer.py  publisher.py
services/document_api/app/models/: base.py  document.py  user.py
services/document_api/app/routes/: auth.py  collection.py  document.py  user.py
services/document_api/app/schemas/: auth.py  base.py  document.py  user.py
services/infra/: docker-compose.yml
services/shared/: constant.py  pyproject.toml
services/shared/embeddings/: provider.py
services/workers/: database.py  env.py  model.py  pdf_ocr_helper.py
services/workers/common/: database.py  document_chunking_helper.py  document_processor_registry.py  env.py  helper.py  model.py  pdf_ocr_helper.py  pyproject.toml
(+18 files in other folders)
