[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "document-api"
version = "0.1.0"
description = "Document ingestion and metadata service"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.110",
    "fastapi-users",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.31",          # ORM
    "psycopg2-binary>=2.9",     # PostgreSQL driver
    "alembic>=1.12",            # optional: DB migrations
    "python-dotenv>=1.0",
    "asyncpg>=0.31.0",
    "bcrypt<4.1.0",
    "python-multipart>=0.0.6",  # Required for file uploads
    "python-jose[cryptography]>=3.3.0",  # JWT handling
    "boto3==1.42.33",
    "aiokafka==0.13.0"
]