[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workers"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "boto3>=1.34",
    "kafka-python>=2.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "tiktoken>=0.12.0",
    "langchain-text-splitters>=1.1.0",
    "langchain>=1.2.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["workers*"]
